- Add two new accessors: $pi and $huge
- Fix for ARMA forecasts: ensure that the dynamic portion starts
  as soon as possible when the --dynamic option is given
- Switch to using libcurl for HTTP transaction support
- Add two new element-wise matrix operators, ".>=" and ".<=",
  (greater than or equal, less than or equal)
- Fix some buggy behavior in regard to empty matrices
- Allow passing "null" as an argument for lists in user-defined
  functions
- Bivariate normal cdf: switch from Drezner(78) to a faster and
  more robust algorithm
- MS Windows build: work around problems associated with the
  "Virtual Store" folder-redirection introduced in Windows Vista
- Enable indexing into named lists to get the ID numbers of series
- Fix bivariate normal cdf calculator (would return NAs in some
  pathological cases)
- GUI: add check for updated addons, such as gig

2012-06-01 version 1.9.9
- Add --cluster option (cluster-robust standard errors) for several
  estimators; see the User's Guide for details
- Add (limited) support for Stata under the "foreign" command
- New accessor $ylist: returns the list of endogenous variables from
  the last system or model estimated
- "fcast" command: enable for multinomial logit models
- "store" command: respect sample range when exporting data to gretl
  database format
- "graphpg" command: enable printing from script
- Mark some more strings for translation
- Fix encoding for Polish translation
- Fix bug 3525304
- Fix bug: in logging commands entered via the gretl console, options
  were being omitted
- Fix behavior of Ctrl-A in non-editable text windows
- Fix breakage of GUI Alt-x command "minibuffer"
- "modtest" command with --normality option: make the accessors $test
  and $pvalue work when the test is done on a VAR
- Fix bug: arima initialization could interfere with formation of
  named lists
- Fix bug: nonlinearity test (logs) misbehaving when the original
  model includes non-positive regressors